opam-version: "2.0"
name: "satysfi-fonts-inconsolata-doc"
version: "3.001"
synopsis: "Document of SATySFi Font Package for inconsolata fonts"
description: """
Document package for satysfi-fonts-inconsolata
"""
maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/puripuri2100/SATySFi-fonts-inconsolata"
bug-reports: "https://github.com/puripuri2100/SATySFi-fonts-inconsolata/issues"
dev-repo: "git+https://github.com/puripuri2100/SATySFi-fonts-inconsolata.git"
depends: [
  "satysfi" {>= "0.0.4" & < "0.0.6"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-fonts-inconsolata" { = "%{version}%" }
]
build: [
  ["satyrographos" "opam" "build"
    "--name" "fonts-inconsolata-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
    "--name" "fonts-inconsolata-doc"
    "--prefix" "%{prefix}%"
    "--script" "%{build}%/Satyristes"]
]
